@@ -1,6 +1,8 @@
 CAWeb v1.5.9
 - Added 111 new State Template Icons
 - Fixed issue with Divi Toggle Module, toggling when clicking on toggle content.
+- Removed action et_divi_replace_parent_stylesheet, prevents Divi replacement of parent style.css.
+
 
 CAWeb v1.5.8
 - Fixed Live Drafts when using New Builder Experience
